--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ body {
 	  
     </div>
   </li>
+  <li style="float:center"><a class="active" href="Chat.html">...Chat</a></li>
   <li style="float:right"><a class="active" href="About.html">About</a></li>
 </ul>
 
