--- a/Chat.html
+++ b/Chat.html
@@ -1,33 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>CSS Website Layout</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-}
-
-/* Style the header */
-.header {
-  background-color: #f1f1f1;
-  padding: 5px;
-  text-align: center;
-  height: 50px;
-}
-
-
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
+<!DOCTYPE html><html><body><iframe src="https://web.powerva.microsoft.com/environments/Default-8d0d81ba-ed03-4c6f-9248-a3b3967ca35c/bots/cr5be_test4/webchat?__version__=2" frameborder="0" style="width: 100%; height: 100%;"></iframe></body></html>
